k8s/notejam-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notejam-backend
  namespace: default

spec:
  # strategy:
  #   rollingUpdate:
  #     maxSurge: 1
  #     maxUnavailable: 1
  #   type: RollingUpdate
  replicas: 3
  selector:
    matchLabels:
      app: notejam-backend
  template:
    metadata:
      labels:
        app: notejam-backend
    spec:
      
      containers:
        - image: sursin2701/note-jam:v1.0.4
          name: notejam
          volumeMounts:
            - name: notejam-storage
              mountPath: /app/storage
          resources:
            limits:
              cpu: "500m"
              memory: "512Mi"
            requests:
              cpu: "250m"
              memory: "256Mi"
          
      volumes:
        - name: notejam-storage
          persistentVolumeClaim:
            claimName: notejam-pvc
