k8s/notejam-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notejam-service
  namespace: default
spec:
  type: NodePort  # 🔥 Changed from ClusterIP to NodePort
  selector:
    app: notejam-backend
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
      nodePort: 30001
