k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: notejam-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: notejam.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: notejam-service
                port:
                  number: 80
